# amqp-api-shared

./: .gitignore  Cargo.toml
src/: amqp_queue.rs  amqp_queue_consumer.rs  amqp_request.rs  lib.rs  request_result.rs  request_result_error.rs
